# wgpu-compute-sample

./: Cargo.toml
src/: memset.wgsl  parallel_min.wgsl  parallel_min_reduce.wgsl  saxpy.wgsl
